{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 402,
  "lineage": "c346ede5-2e56-1802-d72a-22798eef75da",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "devmachine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0717dacde6ae13b14",
            "arn": "arn:aws:ec2:eu-north-1:025004989720:instance/i-0a7a8b935daf574ba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "primary"
                },
                "throughput": 125,
                "volume_id": "vol-03c2cf9646add8653",
                "volume_size": 50,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdc",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "secondary"
                },
                "throughput": 125,
                "volume_id": "vol-0ad89c233ecd33c23",
                "volume_size": 150,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7a8b935daf574ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba01da20493bc4ea",
            "private_dns": "ip-172-31-15-218.eu-north-1.compute.internal",
            "private_ip": "172.31.15.218",
            "public_dns": "ec2-13-48-78-100.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.78.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "root"
                },
                "throughput": 125,
                "volume_id": "vol-084659a3f2c96747c",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3c0244",
            "tags": {
              "Name": "devm-rhel8-x86_64"
            },
            "tags_all": {
              "Name": "devm-rhel8-x86_64"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cc04accd3fd80d63"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.ssh",
            "module.networking.aws_security_group.default",
            "module.networking.data.aws_subnet_ids.default",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:025004989720:vpc/vpc-4f09f526",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-983cc3f1",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ad8d72c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4f09f526",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-6c04fb05",
            "owner_id": "025004989720",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1e283b26b4178ad",
            "association_id": "eipassoc-07e3a55ed2f7aae2d",
            "domain": "vpc",
            "id": "eipalloc-0a1e283b26b4178ad",
            "instance": "i-0a7a8b935daf574ba",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0ba01da20493bc4ea",
            "private_dns": "ip-172-31-15-218.eu-north-1.compute.internal",
            "private_ip": "172.31.15.218",
            "public_dns": "ec2-13-50-20-122.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.20.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TerraformEIP"
            },
            "tags_all": {
              "Name": "TerraformEIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.compute.aws_instance.devmachine",
            "module.compute.aws_key_pair.ssh",
            "module.networking.aws_security_group.default",
            "module.networking.data.aws_subnet_ids.default",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:025004989720:security-group/sg-0cc04accd3fd80d63",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cc04accd3fd80d63",
            "ingress": [],
            "name": "terraform-security-group",
            "name_prefix": "",
            "owner_id": "025004989720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-SG"
            },
            "tags_all": {
              "Name": "terraform-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-4f09f526"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-758754355",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cc04accd3fd80d63",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1789793391",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cc04accd3fd80d63",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1587325769",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cc04accd3fd80d63",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "213.55.241.218/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3775331174",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cc04accd3fd80d63",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}